--- a/Deployment/deploy.yml
+++ b/Deployment/deploy.yml
@@ -1,19 +1,14 @@
 ---
-- name: Deploy Docker Image to Container
-  hosts: all
-  vars:
-  ansible_python_interpreter: /usr/bin/python3
+- name: Pull Docker Image of Calculator
+  hosts: localhost
   tasks:
-    - name: Pull Docker Image
+    - name: Pull image
       docker_image:
-        name: heetvasani1/scientificcalculator
-        tag: latest
+        name: heetvasani1/scientificcalculatorr:latest
         source: pull
-
-    - name: Start Docker Service
+    - name: Start docker service
       service:
         name: docker
         state: started
-
     - name: Running container
-      shell: docker run -it -d --name Calculator heetvasani1/scientificcalculator
+      shell: docker create -it --name Calculator heetvasani1/scientificcalculator
