--- a/Deployment/deploy.yml
+++ b/Deployment/deploy.yml
@@ -1,6 +1,6 @@
 ---
 - name: Pull Docker Image of Calculator
-  hosts: localhost
+  hosts: all
   tasks:
     - name: Pull image
       docker_image:
