--- a/Deployment/deploy.yml
+++ b/Deployment/deploy.yml
@@ -1,14 +1,23 @@
 ---
-- name: Pull Docker Image of Calculator
-  hosts: localhost
+# - name: Pull Docker Image of Calculator
+#   hosts: localhost
+#   tasks:
+#     - name: Pull image
+#       docker_image:
+#         name: heetvasani1/scientificcalculator:latest
+#         source: pull
+#     - name: Start docker service
+#       service:
+#         name: docker
+#         state: started
+#     - name: Running container
+#       shell: docker create -it --name Calculator heetvasani1/scientificcalculator
+- name: Pull Docker image of Calculator
+  hosts: all
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
   tasks:
     - name: Pull image
-      docker_image:
-        name: heetvasani1/scientificcalculator:latest
-        source: pull
-    - name: Start docker service
-      service:
-        name: docker
-        state: started
+      shell: docker pull heetvasani1/scientificcalculator
     - name: Running container
-      shell: docker create -it --name Calculator heetvasani1/scientificcalculator
+      shell: docker run -it -d --name calculator heetvasani1/scientificcalculator
